--- a/sncp-cashier/cashier-domain/pom.xml
+++ b/sncp-cashier/cashier-domain/pom.xml
@@ -12,9 +12,13 @@
 
 	<dependencies>
 		<!-- 添加redis支持 -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-redis</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
 		</dependency>
 		<!-- druid -->
 		<dependency>
