收银台：新增海外数据源配置和memcache配置

--- a/sncp-cashier/cashier-api/pom.xml
+++ b/sncp-cashier/cashier-api/pom.xml
@@ -270,9 +270,9 @@
 		</profile>
 		<!-- 公网环境 -->
 		<profile>
-			<id>production</id>
+			<id>prod</id>
 			<properties>
-				<profileActive>production</profileActive>
+				<profileActive>prod</profileActive>
 			</properties>
 		</profile>
 	</profiles>
