--- a/sncp-cashier/pom.xml
+++ b/sncp-cashier/pom.xml
@@ -100,7 +100,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	<distributionManagement>
+	<!-- <distributionManagement>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>Snapshots</name>
@@ -112,7 +112,7 @@
 			<name>Releases</name>
 			<url>${maven.repositories.url}/content/repositories/releases</url>
 		</repository>
-	</distributionManagement>
+	</distributionManagement> -->
 
 
 
