--- a/sncp-cashier/cashier-core/pom.xml
+++ b/sncp-cashier/cashier-core/pom.xml
@@ -12,11 +12,17 @@
 
 	<artifactId>cashier-core</artifactId>
 	<name>cashier-core</name>
+	<version>1.1.0-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+	<dependency>
+	<groupId>net.snail</groupId>
+	<artifactId>sncp-sms</artifactId>
+	<version>1.0.0</version>
+	</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
