--- a/sncp-cashier/cashier-api/src/main/resources/dev172/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/dev172/application.properties
@@ -38,19 +38,20 @@ spring.datasource.filters=stat,wall,slf4j
 
 
 #########server tomcat \u914d\u7f6e#########
-server.port= 80
+server.port= 88
 server.tomcat.max-threads= 1000
 server.tomcat.uri-encoding= UTF-8
 #########server tomcat \u914d\u7f6e#########
 
 
 ########memcache###
-memcached.servers=10.17.0.23:90,10.17.0.23:9009
+#memcached.servers=10.17.0.23:90,10.17.0.23:9009
+memcached.servers=10.206.2.44:90
 ########memcache###
 
 ########sms########
-sms.sendurl=http://10.17.0.21:84/validation/send.do
-sms.checkurl=http://10.17.0.21:84/validation/validate.do
+sms.sendurl=http://10.206.2.42:84/validation/send.do
+sms.checkurl=http://10.206.2.42:84/validation/validate.do
 sms.appId=90
 sms.type=TEST
 sms.password=G9SZRA7jMGxgRc
