--- a/sncp-cashier/cashier-domain/pom.xml
+++ b/sncp-cashier/cashier-domain/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cashier-domain</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<!-- <version>1.1.0-SNAPSHOT</version> -->
 	
 	<packaging>jar</packaging>
 
@@ -269,7 +269,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>com.mysema.maven</groupId>
 				<artifactId>apt-maven-plugin</artifactId>
 				<version>1.1.3</version>
@@ -284,7 +284,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 
