--- a/sncp-cashier/cashier-core/pom.xml
+++ b/sncp-cashier/cashier-core/pom.xml
@@ -39,6 +39,11 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency> -->
 		<!-- 银联 app支付 新SDK -->
+	<dependency>
+		<groupId>javax.ws.rs</groupId>
+		<artifactId>jsr311-api</artifactId>
+		<version>1.1.1</version>
+	</dependency>
 		<dependency>
 			<groupId>com.unionpay.acp</groupId>
 			<artifactId>upacp_sdk</artifactId>
