--- a/sncp-cashier/cashier-core/pom.xml
+++ b/sncp-cashier/cashier-core/pom.xml
@@ -19,6 +19,21 @@
 	</properties>
 	<dependencies>
 	<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.11</version>
+</dependency>
+	
+	
+	<dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+    <version>3.11.0</version>
+</dependency>
+
+
+	<dependency>
+	
 	<groupId>net.snail</groupId>
 	<artifactId>sncp-sms</artifactId>
 	<version>1.0.0</version>
