--- a/sncp-cashier/cashier-api/src/main/resources/dev172/bootstrap.yml
+++ b/sncp-cashier/cashier-api/src/main/resources/dev172/bootstrap.yml
@@ -1,9 +1,18 @@
-spring: 
+server:
+  session:
+    timeout: 1800
+    cookie:
+      http-only: false
+      secure: false
+
+
+spring:
   application:
     name: micro-cloud-cashier
   profiles:
     active: dev172
   mvc:
+
     view:
       prefix: /WEB-INF/view
       suffix: .jsp
@@ -11,6 +20,7 @@ spring:
     basename: message/i18n/messages
     encoding: UTF-8
   #cas client config
+
   cas: 
     sign-out-filters: /logout
     auth-filters: /sso/**,/m/sso/**,/security/*,/security/ttb/pay
@@ -22,7 +32,8 @@ spring:
     cas-server-url-prefix: https://sso.woniu.com
     redirect-after-validation: true
     use-session: true
-    server-name: http://cashier.woniu.com
+    server-name: http://us.cashier.woniu.com
+    encoding: utf-8
   #jpa config
   jpa:
     show-sql: true
