--- a/sncp-cashier/cashier-core/pom.xml
+++ b/sncp-cashier/cashier-core/pom.xml
@@ -31,6 +31,11 @@
     <version>3.11.0</version>
 </dependency>
 
+		<dependency>
+			<groupId>org.jasig.cas.client</groupId>
+			<artifactId>cas-client-support-distributed-ehcache</artifactId>
+			<version>${sso.cas.version}</version>
+		</dependency>
 
 	<dependency>
 	
