增加前端delay跳转， 重复成功定单跳到成功页

--- a/sncp-cashier/cashier-api/src/main/resources/prod/application.properties
+++ b/sncp-cashier/cashier-api/src/main/resources/prod/application.properties
@@ -175,7 +175,7 @@ monitor.url=http://monitor.yunwei.woniu.com:81/api/push/
 monitor.timeout=1000
 #\u7c7b\u578b
 monitor.type=10000100008
-
+front.delay.url=https://uswww3.woniu.com/cashier/html5/paymentWait.html
 #heartbeat url
 monitor.hb.url=http://monitor.yunwei.woniu.com:81/api/heartbeat/
 #heartbeat token
